--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.20.2",
+    "clarifai": "^2.9.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.4.2",
