--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start:dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +14,14 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "@netlify/functions": "^1.6.0",
+    "@types/express": "^4.17.17",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.4.2",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "serverless-http": "^3.2.0"
   }
 }
