process.env.PORT

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "PORT=3000 nodemon server.js",
     "build": "npm i",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon server.js"
+    "start:dev": "PORT=3000 nodemon server.js"
   },
   "keywords": [],
   "author": "",
