--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.4.2",
+    "node-fetch": "^3.3.1",
     "pg": "^8.11.0",
     "serverless-http": "^3.2.0"
   }
