--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.4.2",
+    "node-fetch": "^2.6.12",
     "pg": "^8.11.0"
   }
 }
